Update 'go-wiryufnl' component image to: quay.io/rhtap_qe/go-wiryufnl:f577b17a72ecb84c239f0977ff0ba43b6f0f1f5a@sha256:b8f0125e60af9bff6053a0e9292c315e99d8bbb5b6de8496f597561ef89cd575

--- a/components/go-wiryufnl/overlays/development/deployment-patch.yaml
+++ b/components/go-wiryufnl/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-wiryufnl
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-wiryufnl:f577b17a72ecb84c239f0977ff0ba43b6f0f1f5a@sha256:b8f0125e60af9bff6053a0e9292c315e99d8bbb5b6de8496f597561ef89cd575
+          name: container-image
